---------------------------------------------
- Wonder Scale Website                      -
---------------------------------------------

- v1.0.1100                                 -
---------------------------------------------
- 2021-09-19                                -
---------------------------------------------
.: WSW: Task - Advertisement Module (WSW-133)

---------------------------------------------
- 2021-08-24                                -
---------------------------------------------
.: WSW: Task - Upgrade to angular v12 (WSM-424)

---------------------------------------------
- 2021-08-16                                -
---------------------------------------------
.: WSW: Task - Using session to commit multiple collection update (WSM-421)

- v1.0.10944                                -
---------------------------------------------
- 2021-07-31                                -
---------------------------------------------
.: WSW: Task - Update build command (WSW-132)

---------------------------------------------
- 2021-07-31                                -
---------------------------------------------
.: WSM: Task - Review Module (WSM-413)

- 2021-07-20                                -
---------------------------------------------
.: WSM: Task - Add message note before send to merchant (WSM-410)

- v1.0.10943                                -
---------------------------------------------
- 2021-07-18                                -
---------------------------------------------
.: WSM: Task - Send an email to notify once order has been approved by merchant (WSM-397)
.: WSM: Task - Add free delivery confirmation (WSM-418)
.: WSM: Task - Add user data deletion for Facebook (WSM-414)

- v1.0.10942                                -
---------------------------------------------
- 2021-07-07                                -
---------------------------------------------
.: WSW: Task - FAQ (WSM-391)

- v1.0.10941                                -