@@ -11,21 +11,17 @@ body {
 .swiper-container {
   margin-left: auto;
   margin-right: auto;
-//   width: 100%;
-//   height: 100%;
 }
 
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-//   background: #fff;
 
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  // height: calc((100% - 10px) / 2);
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   -webkit-justify-content: center;
